--- a/java/config/.editorconfig
+++ b/java/config/.editorconfig
@@ -20,7 +20,7 @@ trim_trailing_whitespace = true
 max_line_length = 120
 #end universal
 
-#begin domain specific (from the idea's section; thus no guaranties)
+#begin domain specific (from the idea's section; thus no guarantees)
 curly_bracket_next_line = true
 spaces_around_operators = true
 spaces_around_brackets = both
