added date to editor config; removed simple python script: folders to txt

--- a/config/java/.editorconfig
+++ b/config/java/.editorconfig
@@ -1,4 +1,4 @@
-# foresterre editorconfig
+# foresterre :: editorconfig :: Date[2016.07.08]
 # documentation from: https://github.com/editorconfig/editorconfig/wiki/EditorConfig-Properties
 
 #begin universal
